--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,8 @@
 			"args": [
 				"-g",
 				"${file}",
+				"-lpthread",
+				"-ljson-c",
 				"-o",
 				"${fileDirname}/${fileBasenameNoExtension}"
 			],
